--- a/todo
+++ b/todo
@@ -1,4 +1,11 @@
 plot_ranks:
-	make iterative 
-	restrict to TCRs in tumor
+	Make iterative 
+	Make paneled graphs
+	Restrict to TCRs in tumor
+	Most changed sequences
 	
+Misc:
+	Work on tumor analysis
+		What happens in the periphery to the most abundant tumor TCRs?
+	Work on optimization of # of clones for max overlap difference
+	Figure out better way to wrangle metadata in R
