--- a/scripts/rmd/neoadjuvant.Rmd
+++ b/scripts/rmd/neoadjuvant.Rmd
@@ -88,19 +88,19 @@ for(b in metrics){
 ## Overlaps
 
 ```{r echo=verbose,eval=TRUE,fig.align='center',fig.height=8}
-rownames(olm) <- paste0(dict$patient,dict$type)
-colnames(olm) <- rownames(olm)
+rownames(mm) <- paste0(dict$patient,dict$type)
+colnames(mm) <- rownames(mm)
 w <- c(which(dict$response=='NR'),which(dict$response=='R'))
 tdict <- dict[w,]
-tolm <- olm[w,w]
-tolm.m <- melt(tolm)
-g <- ggplot(tolm.m,aes(x=Var1,y=Var2)) +
+tmm <- mm[w,w]
+tmm.m <- melt(tmm)
+g <- ggplot(tmm.m,aes(x=Var1,y=Var2)) +
     geom_tile(aes(fill=value)) +
     coord_fixed() +
     scale_fill_gradient(low='white',high='black')+
     theme(axis.text=element_text(size=5,colour=tdict$response),
             axis.text.x=element_text(angle=90,hjust=1,vjust=0.5))+
-    xlab('') + ylab('') + ggtitle('Overlap')
+    xlab('') + ylab('') + ggtitle('Morisita Overlap')
 g
 ```
 \clearpage
